maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:27: error: not found: value i
      if(!aMurNord(i,j) && getIndication(x,y-1) != 9999){
                   ^ShortestPathMaze:27: error: not found: value j
      if(!aMurNord(i,j) && getIndication(x,y-1) != 9999){
                     ^ShortestPathMaze:30: error: not found: value i
      if(!aMurNord(i,j+1) && getIndication(x,y-1) != 9999){
                   ^ShortestPathMaze:30: error: not found: value j
      if(!aMurNord(i,j+1) && getIndication(x,y-1) != 9999){
                     ^